--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ title="Fullscreen mode"
   <div class="menu-dropdown__content">
     <ul>
       <li>
-        <a href="https://cgentemann.github.io/Transform-to-Open-Science-Book"
+        <a href="https://nasa.github.io/Transform-to-Open-Science"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -504,7 +504,7 @@ title="Source repository"
       </li>
       
       <li>
-        <a href="https://cgentemann.github.io/Transform-to-Open-Science-Book/issues/new?title=Issue%20on%20page%20%2Findex.html&body=Your%20issue%20content%20here."
+        <a href="https://nasa.github.io/Transform-to-Open-Science/issues/new?title=Issue%20on%20page%20%2Findex.html&body=Your%20issue%20content%20here."
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -521,7 +521,7 @@ title="Open an issue"
       </li>
       
       <li>
-        <a href="https://github.com/cgentemann.github.io/Transform-to-Open-Science-Book/edit/main/index.md"
+        <a href="https://github.com/nasa.github.io/Transform-to-Open-Science/edit/open-science-101/index.md"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
