--- a/search.html
+++ b/search.html
@@ -491,7 +491,7 @@ title="Fullscreen mode"
   <div class="menu-dropdown__content">
     <ul>
       <li>
-        <a href="https://cgentemann.github.io/Transform-to-Open-Science-Book"
+        <a href="https://nasa.github.io/Transform-to-Open-Science"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -508,7 +508,7 @@ title="Source repository"
       </li>
       
       <li>
-        <a href="https://cgentemann.github.io/Transform-to-Open-Science-Book/issues/new?title=Issue%20on%20page%20%2Fsearch.html&body=Your%20issue%20content%20here."
+        <a href="https://nasa.github.io/Transform-to-Open-Science/issues/new?title=Issue%20on%20page%20%2Fsearch.html&body=Your%20issue%20content%20here."
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
