deploy: 3e3074046dc7b461a3d35474189e574f8177fae7

--- a/Open-Science-101/Module_1/Lesson_5/readme.html
+++ b/Open-Science-101/Module_1/Lesson_5/readme.html
@@ -50,7 +50,7 @@ const thebe_selector_input = "pre"
 const thebe_selector_output = ".output, .cell_output"
 </script>
     <script async="async" src="../../../_static/sphinx-thebe.js"></script>
-    <link rel="canonical" href="https://nasa.github.io/Transform-to-Open-Science-Book/Open-Science-101/Module_1/Lesson_5/readme.html" />
+    <link rel="canonical" href="https://cgentemann.github.io/Transform-to-Open-Science-Book/Open-Science-101/Module_1/Lesson_5/readme.html" />
     <link rel="index" title="Index" href="../../../genindex.html" />
     <link rel="search" title="Search" href="../../../search.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
