--- a/Year_of_Open_Science_Guide/participants/WilsonCenter.html
+++ b/Year_of_Open_Science_Guide/participants/WilsonCenter.html
@@ -50,7 +50,7 @@ const thebe_selector_input = "pre"
 const thebe_selector_output = ".output, .cell_output"
 </script>
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
-    <link rel="canonical" href="https://nasa.github.io/Transform-to-Open-Science-Book/Year_of_Open_Science_Guide/participants/WilsonCenter.html" />
+    <link rel="canonical" href="https://cgentemann.github.io/Transform-to-Open-Science-Book/Year_of_Open_Science_Guide/participants/WilsonCenter.html" />
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Frontiers" href="Frontiers.html" />
