--- a/Open-Science-101/Module_5/Lesson_5/readme.html
+++ b/Open-Science-101/Module_5/Lesson_5/readme.html
@@ -50,7 +50,7 @@ const thebe_selector_input = "pre"
 const thebe_selector_output = ".output, .cell_output"
 </script>
     <script async="async" src="../../../_static/sphinx-thebe.js"></script>
-    <link rel="canonical" href="https://cgentemann.github.io/Transform-to-Open-Science-Book/Open-Science-101/Module_5/Lesson_5/readme.html" />
+    <link rel="canonical" href="https://nasa.github.io/Transform-to-Open-Science-Book/Open-Science-101/Module_5/Lesson_5/readme.html" />
     <link rel="index" title="Index" href="../../../genindex.html" />
     <link rel="search" title="Search" href="../../../search.html" />
     <link rel="next" title="About NASA Transform to Open Science" href="../../../About/About-Announcements.html" />
