--- a/Open-Science-101/Module_1/Lesson_3/readme.html
+++ b/Open-Science-101/Module_1/Lesson_3/readme.html
@@ -486,7 +486,7 @@ title="Fullscreen mode"
   <div class="menu-dropdown__content">
     <ul>
       <li>
-        <a href="https://nasa.github.io/Transform-to-Open-Science"
+        <a href="https://cgentemann.github.io/Transform-to-Open-Science-Book"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -503,7 +503,7 @@ title="Source repository"
       </li>
       
       <li>
-        <a href="https://nasa.github.io/Transform-to-Open-Science/issues/new?title=Issue%20on%20page%20%2FOpen-Science-101/Module_1/Lesson_3/readme.html&body=Your%20issue%20content%20here."
+        <a href="https://cgentemann.github.io/Transform-to-Open-Science-Book/issues/new?title=Issue%20on%20page%20%2FOpen-Science-101/Module_1/Lesson_3/readme.html&body=Your%20issue%20content%20here."
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -520,7 +520,7 @@ title="Open an issue"
       </li>
       
       <li>
-        <a href="https://github.com/nasa.github.io/Transform-to-Open-Science/edit/open-science-101/Open-Science-101/Module_1/Lesson_3/readme.md"
+        <a href="https://github.com/cgentemann.github.io/Transform-to-Open-Science-Book/edit/main/Open-Science-101/Module_1/Lesson_3/readme.md"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
