--- a/Year_of_Open_Science_Guide/participants/IOI.html
+++ b/Year_of_Open_Science_Guide/participants/IOI.html
@@ -488,7 +488,7 @@ title="Fullscreen mode"
   <div class="menu-dropdown__content">
     <ul>
       <li>
-        <a href="https://nasa.github.io/Transform-to-Open-Science"
+        <a href="https://cgentemann.github.io/Transform-to-Open-Science-Book"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -505,7 +505,7 @@ title="Source repository"
       </li>
       
       <li>
-        <a href="https://nasa.github.io/Transform-to-Open-Science/issues/new?title=Issue%20on%20page%20%2FYear_of_Open_Science_Guide/participants/IOI.html&body=Your%20issue%20content%20here."
+        <a href="https://cgentemann.github.io/Transform-to-Open-Science-Book/issues/new?title=Issue%20on%20page%20%2FYear_of_Open_Science_Guide/participants/IOI.html&body=Your%20issue%20content%20here."
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -522,7 +522,7 @@ title="Open an issue"
       </li>
       
       <li>
-        <a href="https://github.com/nasa.github.io/Transform-to-Open-Science/edit/open-science-101/Year_of_Open_Science_Guide/participants/IOI.md"
+        <a href="https://github.com/cgentemann.github.io/Transform-to-Open-Science-Book/edit/main/Year_of_Open_Science_Guide/participants/IOI.md"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
