--- a/genindex.html
+++ b/genindex.html
@@ -49,7 +49,7 @@ const thebe_selector_input = "pre"
 const thebe_selector_output = ".output, .cell_output"
 </script>
     <script async="async" src="_static/sphinx-thebe.js"></script>
-    <link rel="canonical" href="https://nasa.github.io/Transform-to-Open-Science-Book/genindex.html" />
+    <link rel="canonical" href="https://bressler95tops.github.io/bookdebug/genindex.html" />
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -527,7 +527,7 @@ title="Fullscreen mode"
   <div class="menu-dropdown__content">
     <ul>
       <li>
-        <a href="https://cgentemann.github.io/Transform-to-Open-Science-Book"
+        <a href="https://github.com/bressler95tops/bookdebug"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -544,7 +544,7 @@ title="Source repository"
       </li>
       
       <li>
-        <a href="https://cgentemann.github.io/Transform-to-Open-Science-Book/issues/new?title=Issue%20on%20page%20%2Fgenindex.html&body=Your%20issue%20content%20here."
+        <a href="https://github.com/bressler95tops/bookdebug/issues/new?title=Issue%20on%20page%20%2Fgenindex.html&body=Your%20issue%20content%20here."
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
