--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ const thebe_selector_input = "pre"
 const thebe_selector_output = ".output, .cell_output"
 </script>
     <script async="async" src="_static/sphinx-thebe.js"></script>
-    <link rel="canonical" href="https://nasa.github.io/Transform-to-Open-Science-Book/index.html" />
+    <link rel="canonical" href="https://bressler95tops.github.io/bookdebug/index.html" />
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Open Science 101 Curriculum" href="Open-Science-101/README.html" />
@@ -529,7 +529,7 @@ title="Fullscreen mode"
   <div class="menu-dropdown__content">
     <ul>
       <li>
-        <a href="https://cgentemann.github.io/Transform-to-Open-Science-Book"
+        <a href="https://github.com/bressler95tops/bookdebug"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -546,7 +546,7 @@ title="Source repository"
       </li>
       
       <li>
-        <a href="https://cgentemann.github.io/Transform-to-Open-Science-Book/issues/new?title=Issue%20on%20page%20%2Findex.html&body=Your%20issue%20content%20here."
+        <a href="https://github.com/bressler95tops/bookdebug/issues/new?title=Issue%20on%20page%20%2Findex.html&body=Your%20issue%20content%20here."
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -563,7 +563,7 @@ title="Open an issue"
       </li>
       
       <li>
-        <a href="https://github.com/cgentemann.github.io/Transform-to-Open-Science-Book/edit/main/index.md"
+        <a href="https://github.com/bressler95tops/bookdebug/edit/main/index.md"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
