--- a/search.html
+++ b/search.html
@@ -52,7 +52,7 @@ const thebe_selector_output = ".output, .cell_output"
     <script async="async" src="_static/sphinx-thebe.js"></script>
     <script src="_static/searchtools.js"></script>
     <script src="_static/language_data.js"></script>
-    <link rel="canonical" href="https://nasa.github.io/Transform-to-Open-Science-Book/search.html" />
+    <link rel="canonical" href="https://bressler95tops.github.io/bookdebug/search.html" />
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="#" />
   <script src="searchindex.js" defer></script>
@@ -533,7 +533,7 @@ title="Fullscreen mode"
   <div class="menu-dropdown__content">
     <ul>
       <li>
-        <a href="https://cgentemann.github.io/Transform-to-Open-Science-Book"
+        <a href="https://github.com/bressler95tops/bookdebug"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -550,7 +550,7 @@ title="Source repository"
       </li>
       
       <li>
-        <a href="https://cgentemann.github.io/Transform-to-Open-Science-Book/issues/new?title=Issue%20on%20page%20%2Fsearch.html&body=Your%20issue%20content%20here."
+        <a href="https://github.com/bressler95tops/bookdebug/issues/new?title=Issue%20on%20page%20%2Fsearch.html&body=Your%20issue%20content%20here."
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
