--- a/About/About-Announcements.html
+++ b/About/About-Announcements.html
@@ -54,7 +54,7 @@ const thebe_selector_output = ".output, .cell_output"
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Frequently Asked Questions" href="tops_faq.html" />
-    <link rel="prev" title="Lesson 5: From Theory to Practice" href="../Open-Science-101/Module_5/Lesson_5/readme.html" />
+    <link rel="prev" title="Lesson 1: Introduction to Open Results" href="../Open-Science-101/Module_5/Lesson_1/readme.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="docsearch:language" content="None">
     
@@ -768,11 +768,11 @@ title="Print to PDF"
                 
     <!-- Previous / next buttons -->
 <div class='prev-next-area'>
-    <a class='left-prev' id="prev-link" href="../Open-Science-101/Module_5/Lesson_5/readme.html" title="previous page">
+    <a class='left-prev' id="prev-link" href="../Open-Science-101/Module_5/Lesson_1/readme.html" title="previous page">
         <i class="fas fa-angle-left"></i>
         <div class="prev-next-info">
             <p class="prev-next-subtitle">previous</p>
-            <p class="prev-next-title">Lesson 5: From Theory to Practice</p>
+            <p class="prev-next-title">Lesson 1: Introduction to Open Results</p>
         </div>
     </a>
     <a class='right-next' id="next-link" href="tops_faq.html" title="next page">
