--- a/Open-Science-101/Module_5/Lesson_1/readme.html
+++ b/Open-Science-101/Module_5/Lesson_1/readme.html
@@ -53,7 +53,7 @@ const thebe_selector_output = ".output, .cell_output"
     <link rel="canonical" href="https://bressler95tops.github.io/bookdebug/Open-Science-101/Module_5/Lesson_1/readme.html" />
     <link rel="index" title="Index" href="../../../genindex.html" />
     <link rel="search" title="Search" href="../../../search.html" />
-    <link rel="next" title="Lesson 2: Using Open Results" href="../Lesson_2/readme.html" />
+    <link rel="next" title="About NASA Transform to Open Science" href="../../../About/About-Announcements.html" />
     <link rel="prev" title="OS101 Module 5: Open Results" href="../readme.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="docsearch:language" content="None">
@@ -1159,10 +1159,10 @@ title="Print to PDF"
             <p class="prev-next-title">OS101 Module 5: Open Results</p>
         </div>
     </a>
-    <a class='right-next' id="next-link" href="../Lesson_2/readme.html" title="next page">
+    <a class='right-next' id="next-link" href="../../../About/About-Announcements.html" title="next page">
     <div class="prev-next-info">
         <p class="prev-next-subtitle">next</p>
-        <p class="prev-next-title">Lesson 2: Using Open Results</p>
+        <p class="prev-next-title">About NASA Transform to Open Science</p>
     </div>
     <i class="fas fa-angle-right"></i>
     </a>
