--- a/Open-Science-101/Module_4/readme.html
+++ b/Open-Science-101/Module_4/readme.html
@@ -54,7 +54,7 @@ const thebe_selector_output = ".output, .cell_output"
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Lesson 1: Introduction to Open Code" href="Lesson_1/readme.html" />
-    <link rel="prev" title="Lesson 5: From Theory to Practice" href="../Module_5/Lesson_5/readme.html" />
+    <link rel="prev" title="Just a test" href="../Module_5/Lesson_5/readme.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="docsearch:language" content="None">
     
@@ -941,7 +941,7 @@ title="Print to PDF"
         <i class="fas fa-angle-left"></i>
         <div class="prev-next-info">
             <p class="prev-next-subtitle">previous</p>
-            <p class="prev-next-title">Lesson 5: From Theory to Practice</p>
+            <p class="prev-next-title">Just a test</p>
         </div>
     </a>
     <a class='right-next' id="next-link" href="Lesson_1/readme.html" title="next page">
