--- a/Open-Science-101/Test/readme.html
+++ b/Open-Science-101/Test/readme.html
@@ -50,7 +50,7 @@ const thebe_selector_input = "pre"
 const thebe_selector_output = ".output, .cell_output"
 </script>
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
-    <link rel="canonical" href="https://bressler95tops.github.io/bookdebug/Open-Science-101/Module_5/readme.html" />
+    <link rel="canonical" href="https://bressler95tops.github.io/bookdebug/Open-Science-101/Test/readme.html" />
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Just a test" href="Lesson_1/readme.html" />
@@ -547,7 +547,7 @@ title="Source repository"
       </li>
       
       <li>
-        <a href="https://github.com/bressler95tops/bookdebug/issues/new?title=Issue%20on%20page%20%2FOpen-Science-101/Module_5/readme.html&body=Your%20issue%20content%20here."
+        <a href="https://github.com/bressler95tops/bookdebug/issues/new?title=Issue%20on%20page%20%2FOpen-Science-101/Test/readme.html&body=Your%20issue%20content%20here."
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -564,7 +564,7 @@ title="Open an issue"
       </li>
       
       <li>
-        <a href="https://github.com/bressler95tops/bookdebug/edit/main/Open-Science-101/Module_5/readme.md"
+        <a href="https://github.com/bressler95tops/bookdebug/edit/main/Open-Science-101/Test/readme.md"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -592,7 +592,7 @@ title="Edit this page"
   <div class="menu-dropdown__content">
     <ul>
       <li>
-        <a href="../../_sources/Open-Science-101/Module_5/readme.md"
+        <a href="../../_sources/Open-Science-101/Test/readme.md"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -921,7 +921,7 @@ title="Print to PDF"
         },
         kernelOptions: {
             kernelName: "python3",
-            path: "./Open-Science-101/Module_5"
+            path: "./Open-Science-101/Test"
         },
         predefinedOutput: true
     }
