deploy: 5f98a021ff411d3ab4aeeeae23e032fb6efcfc5a

--- a/Open-Science-101/Module_2/Lesson_3/readme.html
+++ b/Open-Science-101/Module_2/Lesson_3/readme.html
@@ -896,7 +896,7 @@ By TOPS Community
 
   <p class="copyright">
     
-      © Copyright Responsible NASA Official: Paul M. Bremner.
+      © Copyright 2023.
       <br/>
     
   </p>
