--- a/Open-Science-101/Module_3/Lesson_1/readme.html
+++ b/Open-Science-101/Module_3/Lesson_1/readme.html
@@ -1117,7 +1117,7 @@ By TOPS Community
 
   <p class="copyright">
     
-      © Copyright Responsible NASA Official: Paul M. Bremner.
+      © Copyright 2023.
       <br/>
     
   </p>
