--- a/Open-Science-101/Module_1/Lesson_3/readme.html
+++ b/Open-Science-101/Module_1/Lesson_3/readme.html
@@ -1004,7 +1004,7 @@ By TOPS Community
 
   <p class="copyright">
     
-      © Copyright Responsible NASA Official: Paul M. Bremner.
+      © Copyright 2023.
       <br/>
     
   </p>
