--- a/Open-Science-101/Module_3/Lesson_2/readme.html
+++ b/Open-Science-101/Module_3/Lesson_2/readme.html
@@ -996,7 +996,7 @@ By TOPS Community
 
   <p class="copyright">
     
-      © Copyright Responsible NASA Official: Paul M. Bremner.
+      © Copyright 2023.
       <br/>
     
   </p>
