--- a/Open-Science-101/Module_4/Lesson_1/readme.html
+++ b/Open-Science-101/Module_4/Lesson_1/readme.html
@@ -1033,7 +1033,7 @@ By TOPS Community
 
   <p class="copyright">
     
-      © Copyright Responsible NASA Official: Paul M. Bremner.
+      © Copyright 2023.
       <br/>
     
   </p>
