--- a/Open-Science-101/Module_4/Lesson_4/readme.html
+++ b/Open-Science-101/Module_4/Lesson_4/readme.html
@@ -1011,7 +1011,7 @@ By TOPS Community
 
   <p class="copyright">
     
-      © Copyright Responsible NASA Official: Paul M. Bremner.
+      © Copyright 2023.
       <br/>
     
   </p>
