--- a/Open-Science-101/Module_5/Lesson_5/readme.html
+++ b/Open-Science-101/Module_5/Lesson_5/readme.html
@@ -909,7 +909,7 @@ By TOPS Community
 
   <p class="copyright">
     
-      © Copyright Responsible NASA Official: Paul M. Bremner.
+      © Copyright 2023.
       <br/>
     
   </p>
