--- a/Proposal_Resources/readme.html
+++ b/Proposal_Resources/readme.html
@@ -595,7 +595,7 @@ By TOPS Community
 
   <p class="copyright">
     
-      © Copyright Responsible NASA Official: Paul M. Bremner.
+      © Copyright 2023.
       <br/>
     
   </p>
