--- a/TOPST/readme.html
+++ b/TOPST/readme.html
@@ -625,7 +625,7 @@ By TOPS Community
 
   <p class="copyright">
     
-      © Copyright Responsible NASA Official: Paul M. Bremner.
+      © Copyright 2023.
       <br/>
     
   </p>
