--- a/Year_of_Open_Science_Guide/participants/HRA.html
+++ b/Year_of_Open_Science_Guide/participants/HRA.html
@@ -602,7 +602,7 @@ By TOPS Community
 
   <p class="copyright">
     
-      © Copyright Responsible NASA Official: Paul M. Bremner.
+      © Copyright 2023.
       <br/>
     
   </p>
