--- a/Year_of_Open_Science_Guide/participants/SpringerNature.html
+++ b/Year_of_Open_Science_Guide/participants/SpringerNature.html
@@ -560,7 +560,7 @@ By TOPS Community
 
   <p class="copyright">
     
-      © Copyright Responsible NASA Official: Paul M. Bremner.
+      © Copyright 2023.
       <br/>
     
   </p>
